# gemini-cli

./: .SRCINFO  .coderabbit.yaml  .dockerignore  .editorconfig  .env  .env.example  .env.swp  .eslintignore  .gitattributes  .githubGeminicodez  .gitignore  .gitlab-ci.yml  .lycheeignore  .mcp.json  .npmignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .yamllint.yml  .zshrc  1,gh  ACTION_CHECKLIST.md  ADDITIONAL_VULNERABILITIES.md  AGENTS.md  AGENT_CAPABILITIES.md  AGENT_IMPLEMENTATION_SUMMARY.md  AGENT_REFERENCE.md  AGENT_SYSTEM_PROMPT_UPDATE.md  ALIBABA_SECURITY_NOTIFICATION.md  BACKUP_FEATURE.md  BS_MIGRATION_PLAN.md  CHANGELOG.md  CHANGELOG_OLLAMA_INTEGRATION.md  CLAUDE.md  CLAUDE_BRANCH_ANALYSIS.md  CLI_CONFIG_COMMANDS.md  CLOUD_ESCAPE_FIXES.md  CODERABBIT_ANALYSIS_REQUEST.md  COMPLETE_VULNERABILITY_REPORT.md  (+431 more)
.allstar/: branch_protection.yaml
.bin/: npm  pnpm  pnpx  yarn  yarnpkg
.captain-hook/: .gitignore  policy.yml  roles.yml
.circleci/: config.yml
.claude/: ecc-tools.json  identity.json  settings.local.json
.codex/: AGENTS.md
.codex-plugin/: plugin.json
.devcontainer/: devcontainer.json
.gcp/: Dockerfile.development  Dockerfile.gemini-code-builder  Dockerfile.maintainer  development-worker.yml  maintainer-worker.yml  release-docker.yaml  release-docker.yml
.gemini/: config.yaml  settings.json  styleguide.md
.github/: CODEO2026  (+6 more)
examples/multi_workspace/context_broker/: __init__.py  pyproject.toml  pytest.ini  server.py  setup.py
examples/multi_workspace/context_broker/context_broker.egg-info/: PKG-INFO  SOURCES.txt
(+2165 files in other folders)
